--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,29 @@
 {
-    "welcome-back": "Welcome back",
-    "Project": "Project",
-    "Analytics": "Analytics"
+    "title": "366 Office",
+    "channel-create": "Create Channel",
+    "channel-add": "Add New Channel",
+    "channel-subscribe" : "Subscribe Channel",
+    "channel-edit": "Edit Channel",
+    "channel-leave": "Leave Channel",
+    "channel-setting": "Channel Setting",
+    "channel-status": "Channel Status",
+    "topic-title": "Topic",
+    "topic-create": "Create Topic",
+    "topic-edit": "Edit Topic",
+    "topic-setting": "Topic Setting",
+    "topic-status": "Topic Status",
+    "other-settings": "Settings",
+    "other-status": "Status",
+    "other-type": "Type",
+    "other-subscribe": "Subscribe",
+    "other-space": "Space",
+    "other-visibility": "Visibility",
+    "other-save": "Save",
+    "other-close": "Close",
+    "other-title": "Title",
+    "other-description": "Description",
+    "my-profile": "My profile",
+    "other-inbox": "Inbox",
+    "other-logout": "Log out",
+    "other-more": "More"
 }
